--- a/index.html
+++ b/index.html
@@ -5,20 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Google Drive</title>
 </head>
 <body>
-    <section>
-        <div class="row p-4">
-            <div class="col-2">
-                <a href="/">
-                <img src="img/Logo.png" width="120px" alt="Google drive logo"></a>
-            </div>
-            <div class="col-10">
+    <section class="border-bottom container-fluid">
+            <div class="row p-4">
+                <div class="col-2 col-sm-4">
+                    <a href="/">
+                    <img src="img/Logo.png" width="120px" alt="Google drive logo"></a>
+                </div>
+                <div class="col-10 col-sm-8 d-flex justify-content-between align-items-center">
+                    <div class="input-group">
+                        <i class="fas fa-search"></i>
+                        <input class="search-input" type="text" placeholder="search here">
+
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center mr-5">
+                            <a><i class="far fa-question-circle mr-3"></i></a>
+                            <a><i class="fas fa-cog"></i></a>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <a><i class="fas fa-bars mr-3"></i></a>
+                            <img src="img/Rishi's Image.jpg" class="user-image" alt="user-image">
+                        </div>
+                    </div>
+                </div>
 
             </div>
+    </section>
 
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-2 px-2 py-4">
+                <a href="/" class="d-flex justify-content-center align-items-center mb-4 new-btn mb-4">
+                    <img src="img/New-Icon.png" height="30" alt="icon for add new item">
+                    <h5 class="my-auto py-3 ml-1">New</h5>
+                </a>  
+                <div class="left-links">
+                    <a href="/" class="d-flex shared-with-me-link">
+                        <div class="mr-4">
+                            <i class="far fa-hdd"></i>
+                        </div>
+                        <div>
+                             <p class="my-auto">My drive</p>
+                        </div>
+                    </a> 
+                </div>
+                <div class="left-links">
+                    <a href="/" class="d-flex shared-with-me-link">
+                        <div class="mr-4">
+                             <i class=" fas fa-user-friends"></i>
+                        </div>
+                        <div>
+                            <p class="my-auto">Shared with me</p>
+                        </div>
+                    </a> 
+                </div>
+                <div class="left-links">
+                    <a href="/" class="d-flex shared-with-me-link">
+                        <div class="mr-4">
+                            <i class="far fa-clock"></i>
+                        </div>
+                        <div>
+                            <p class="my-auto">Recent</p>
+                        </div>
+                    </a> 
+            </div>
+                <div class="left-links">
+                    <a href="/" class="d-flex shared-with-me-link">
+                        <div class="mr-4">
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div>
+                            <p class="my-auto">Starred</p>
+                        </div>
+                    </a> 
+            </div>
+                <div class="left-links">
+                    <a href="/" class="d-flex shared-with-me-link">
+                        <div class="mr-4">
+                            <i class="far fa-trash-alt"></i>
+                        </div>
+                        <div>
+                            <p class="my-auto">Trash</p>
+                        </div>
+                    </a> 
+            </div>
+            </div>
+            <div class="col-10 py-4">
+                <div class="d-flex justify-content-between border-bottom">
+                    <div class="dropdown">
+                        <button class="btn bg-white dropdown-toggle my-drive-btn font-weight-light " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          My Drive
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="dropdown-item" href="#">Upload File</a>
+                          <a class="dropdown-item" href="#">Upload Folder</a>
+                        </div>
+                      </div>
+                      <div class="d-flex my-drive-list">
+                          <i class="fa fa-list"></i>
+                          <i class="fa fa"></i>
+                      </div>
+
+                </div>
+            </div>
         </div>
+        
     </section>
     
 
