quick access and folders section  added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             </div>
             <div class="col-10 py-4">
-                <div class="d-flex justify-content-between border-bottom">
+                <div class="d-flex justify-content-between border-bottom mb-4">
                     <div class="dropdown">
                         <button class="btn bg-white dropdown-toggle my-drive-btn font-weight-light " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           My Drive
@@ -104,13 +104,67 @@
                           <a class="dropdown-item" href="#">Upload File</a>
                           <a class="dropdown-item" href="#">Upload Folder</a>
                         </div>
-                      </div>
-                      <div class="d-flex my-drive-list">
-                          <i class="fa fa-list"></i>
-                          <i class="fa fa"></i>
-                      </div>
+                    </div>
+                
+                    <div class="d-flex my-drive-list">
+                         <a href="/" ></a><i class="fa fa-list mr-4"></i></a>
+                          <a href="/"></a><i class="fa fa-info-circle mr-4"></i></a>
+                    </div>
 
                 </div>
+                    <div class="quick-access ml-2">
+                        <p class="mb-3">Quick Access</p>
+                        <div class="d-flex">
+                            <a href="/">
+                            <div class="card mr-4" style="width: 18rem;">
+                                <img class="card-img-top" src="/img/Card-1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title text-uppercase"><i class="fas fa-stream mr-2"></i>CSS - insta</h5>
+                                <p class="card-text small">Using HTML and CSS</p>
+                                </div>
+                            </div>
+                                </a>
+                                <a href="/">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="/img/Card-2.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                        <h5 class="card-title text-uppercase"><i class="fas fa-stream mr-2"></i>My Goals</h5>
+                                        <p class="card-text small">You edited yesterday</p>
+                                        </div>
+                                    </div>
+                                </a>
+                        </div>
+
+                    </div>
+
+                    <div class="quick-access ml-2">
+                        <p class="mb-3">Folders</p>
+                        <div class="d-flex">
+                            <a href="/">
+                            <div class="card mr-4" style="width: 18rem;">
+                                <div class="card-body">
+                                    <h6 class="card-title  mb-0"><i class="fas fa-folder mr-4"></i>CSS - Insta</h6>
+                                 </div>
+                            </div>
+                                </a>
+                                <a href="/">
+                                    <div class="card mr-4" style="width: 18rem;">
+                                        <div class="card-body">
+                                            <h6 class="card-title mb-0"><i class="fas fa-folder mr-4"></i>My Goals</h6>
+                                        </div>
+                                    </div>
+                                </a>
+
+                                <a href="/">
+                                    <div class="card mr-4" style="width: 18rem;">
+                                        <div class="card-body">
+                                            <h6 class="card-title mb-0"><i class="fas fa-folder mr-4"></i>My clients</h6>
+                                        </div>
+                                    </div>
+                                </a>
+                        </div>
+
+                    </div>
             </div>
         </div>
         
