pending some responsive work

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
 
                 </div>
-                    <div class="quick-access ml-2">
+                    <div class="quick-access ml-2 mb-5">
                         <p class="mb-3">Quick Access</p>
                         <div class="d-flex">
                             <a href="/">
@@ -137,7 +137,7 @@
 
                     </div>
 
-                    <div class="quick-access ml-2">
+                    <div class="quick-access ml-2 mb-5">
                         <p class="mb-3">Folders</p>
                         <div class="d-flex">
                             <a href="/">
@@ -159,6 +159,29 @@
                                     <div class="card mr-4" style="width: 18rem;">
                                         <div class="card-body">
                                             <h6 class="card-title mb-0"><i class="fas fa-folder mr-4"></i>My clients</h6>
+                                        </div>
+                                    </div>
+                                </a>
+                        </div>
+
+                    </div>
+
+                    <div class="quick-access ml-2 mb-5">
+                        <p class="mb-3">Files</p>
+                        <div class="d-flex">
+                            <a href="/">
+                            <div class="card mr-4" style="width: 18rem;">
+                                <img class="card-img-top" src="/img/Card-4.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title mb-0"><i class="fas fa-image mr-4"></i>New York citys</h5>
+                                </div>
+                            </div>
+                                </a>
+                                <a href="/">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="/img/Card-3.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                        <h5 class="card-title mb-0"><i class="fas fa-image mr-4"></i>Banff lake</h5>
                                         </div>
                                     </div>
                                 </a>
